feat: add achievements and cosmetics
